# groundcover-sdk-python

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: async_usage.py  basic_usage.py  client_options.py  dashboards_lifecycle.py  events_search.py  logs_search.py  metrics_query.py  monitors_lifecycle.py
scripts/: generator-config.yaml  post_generate.py  validate_oas3_routes.py
src/groundcover/: __init__.py  _datetime_compat.py  _generated_client.py  _generated_errors.py  _generated_types.py  async_client.py  client.py  config.py  exceptions.py  transport.py
src/groundcover/api/: __init__.py
src/groundcover/api/agent/: agent_create_skill.py  agent_delete_skill.py  agent_get_skill.py  agent_list_skills.py  agent_update_skill.py
src/groundcover/api/aggregations_metrics/: create_metrics_aggregator_config.py  delete_metrics_aggregator_config.py  get_metrics_aggregator_config.py  update_metrics_aggregator_config.py
src/groundcover/api/apikeys/: create_api_key.py  delete_api_key.py  list_api_keys.py
src/groundcover/api/connected_apps/: create_connected_app.py  delete_connected_app.py  get_connected_app.py  list_connected_apps.py  update_connected_app.py
src/groundcover/api/dashboards/: archive_dashboard.py  create_dashboard.py  delete_dashboard.py  get_dashboard.py  get_dashboards.py  restore_dashboard.py  update_dashboard.py
src/groundcover/models/: __init__.py  add_label_config.py  add_label_config_add_label.py  advanced_data_scope_defines_fine_grained_data_scoping_rules.py  agent_create_skill_response_200.py  agent_create_skill_response_400.py  agent_create_skill_response_401.py  agent_create_skill_response_403.py  agent_create_skill_response_409.py  agent_create_skill_response_413.py  agent_create_skill_response_422.py  agent_create_skill_response_500.py  agent_create_skill_response_502.py  agent_create_skill_response_503.py  agent_custom_instructions.py  agent_custom_instructions_request.py  agent_delete_skill_response_200.py  agent_delete_skill_response_400.py  agent_delete_skill_response_401.py  agent_delete_skill_response_403.py  agent_delete_skill_response_404.py  agent_delete_skill_response_500.py  agent_delete_skill_response_502.py  agent_delete_skill_response_503.py  agent_get_skill_response_200.py  agent_get_skill_response_400.py  agent_get_skill_response_401.py  agent_get_skill_response_404.py  agent_get_skill_response_500.py  agent_get_skill_response_502.py  agent_get_skill_response_503.py  agent_list_skills_response_200.py  agent_list_skills_response_400.py  agent_list_skills_response_401.py  agent_list_skills_response_500.py  agent_list_skills_response_502.py  agent_list_skills_response_503.py  agent_llm_provider_config.py  agent_llm_provider_config_request.py  agent_skill_request_is_forwarded_to_agent_service_for_skill_creation_and_updates.py  (+925 more)
src/groundcover/types/: __init__.py  conditions.py  matchers.py
src/groundcover/utils/: __init__.py  condition_set.py
tests/e2e/: conftest.py  test_aggregations.py  test_api_keys.py  test_dashboards.py  test_data_integrations.py  test_events.py  test_ingestion_keys.py  test_k8s.py  test_logs.py  test_metrics.py  test_metrics_discovery.py  test_monitors.py  test_pipelines.py  test_policies.py  test_secrets.py  test_service_accounts.py  test_silences.py  test_synthetics.py  test_traces.py  test_workflows.py
tests/unit/: test_client.py  test_condition_set.py  test_config.py  test_datetime_compat.py  test_post_generate.py  test_transport.py
(+89 files in other folders)
