[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "groundcover-sdk"
dynamic = ["version"]
description = "Official Python SDK for the groundcover API"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25.0,<1.0",
    "attrs>=23.0",
    "tenacity>=8.0,<10.0",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.15,<1.0",
    "mypy>=1.5",
    "respx>=0.20",
]

[tool.hatch.version]
path = "src/groundcover/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/groundcover"]

[tool.ruff]
target-version = "py39"
line-length = 120
exclude = [
    "src/groundcover/api/",
    "src/groundcover/models/",
    "src/groundcover/_generated_types.py",
    "src/groundcover/_generated_errors.py",
    "src/groundcover/_generated_client.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["groundcover"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["src/groundcover/api/", "src/groundcover/models/", "src/groundcover/_generated_"]
